--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,7 @@
   padding: 0.5rem;
   display: flex;
   gap: 0.5rem;
-  background-color: #fff;
+  background-color: #36c3ff;
   color: #000;
   justify-content: space-between;
 }
