--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   padding: 0.5rem;
   display: flex;
   gap: 0.5rem;
@@ -15,4 +15,4 @@
 .nav-item {
   padding: 0 0.5rem;
   font-weight: bold;
-}
+} */
